--- a/app/Resources/views/job/edit.html.twig
+++ b/app/Resources/views/job/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Modifier un job' %}
+{% set h1 = 'admin.job.edit_job' | trans %}
 {% set href = path('app.admin.job.index') %}
 
 {% block subContent %}
