--- a/app/Resources/views/partial/_no_element.html.twig
+++ b/app/Resources/views/partial/_no_element.html.twig
@@ -1,3 +1,3 @@
 <div class="d-flex justify-content-center p-3">
-    <span class="text-muted">Aucun élément n'a été trouvé</span>
+    <span class="text-muted">{{ 'app.partial.no_element' | trans }}</span>
 </div>
