--- a/app/Resources/views/action/_job_create.html.twig
+++ b/app/Resources/views/action/_job_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_JOB_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.job.new')  }}">Ajouter une tâche planifiée</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.job.new')  }}">{{ 'admin.button.add_job' | trans }}</a>
 {% endif %}
