--- a/app/Resources/views/groups/_form.html.twig
+++ b/app/Resources/views/groups/_form.html.twig
@@ -10,5 +10,5 @@
         </div>
     {% endif %}
 
-    <button class="btn btn-primary">Enregistrer</button>
+    <button class="btn btn-primary">{{ 'admin.button.save' | trans }}</button>
 {{ form_end(form) }}
