--- a/app/Resources/views/groups/new.html.twig
+++ b/app/Resources/views/groups/new.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Ajouter un groupe' %}
+{% set h1 = 'admin.button.add_group' | trans %}
 {% set href = path('app_admin_groups_index') %}
 
 {% block subContent %}
