--- a/app/Resources/views/job/_form.html.twig
+++ b/app/Resources/views/job/_form.html.twig
@@ -2,5 +2,5 @@
     {{ form_row(form.label) }}
     {{ form_row(form.command) }}
     {{ form_row(form.frequencyJobFormat) }}
-    <button type="submit" class="btn btn-primary">{{button_label|default('Enregistrer')}}</button>
+    <button type="submit" class="btn btn-primary">{{ 'admin.button.save' | trans }}</button>
 {{ form_end(form) }}
