--- a/app/Resources/views/job/new.html.twig
+++ b/app/Resources/views/job/new.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Ajouter un job' %}
+{% set h1 = 'admin.button.add_job' | trans %}
 {% set href = path('app.admin.job.index') %}
 
 {% block subContent %}
