--- a/app/Resources/views/partial/warning_delete_modal.html.twig
+++ b/app/Resources/views/partial/warning_delete_modal.html.twig
@@ -2,7 +2,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Etes vous sûr de vouloir supprimer cet élément?</h4>
+                <h4 class="modal-title">{{ 'app.partial.warning_delete_modal' | trans }}</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
