--- a/app/Resources/views/setting/manage.html.twig
+++ b/app/Resources/views/setting/manage.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Configurer les paramètres' %}
+{% set h1 = 'admin.setting.config' | trans %}
 {% block subContent %}
 
     <div class="card">
