--- a/app/Resources/views/action/_user_create.html.twig
+++ b/app/Resources/views/action/_user_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_USER_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.user.new')  }}">Ajouter un utilisateur</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.user.new')  }}">{{ 'admin.button.add_user' | trans }}</a>
 {% endif %}
