--- a/app/Resources/views/user/edit.html.twig
+++ b/app/Resources/views/user/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Modifier un utilisateur' %}
+{% set h1 = 'admin.user.edit_user' | trans %}
 {% set href = path('app.admin.user.index') %}
 
 {% block subContent %}
