--- a/app/Resources/views/user/new.html.twig
+++ b/app/Resources/views/user/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Créer un nouvel utilisateur' %}
+{% set h1 = 'admin.button.add_user' | trans %}
 {% set href = path('app.admin.user.index') %}
 
 {% block subContent %}
     <div class="card">
         <div class="card-body">
-            {{ include('user/_form.html.twig', {'buttonLabel' : 'Enregistrer'}) }}
+            {{ include('user/_form.html.twig', {'buttonLabel' : 'admin.button.save'}) }}
         </div>
     </div>
 {% endblock %}
