--- a/app/Resources/views/action/_notification_create.html.twig
+++ b/app/Resources/views/action/_notification_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_NOTIFICATION_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app.admin.notification.new')  }}">Ajouter une notification</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.notification.new')  }}">{{ 'admin.button.add_notification' | trans }}</a>
 {% endif %}
