--- a/app/Resources/views/notification/new.html.twig
+++ b/app/Resources/views/notification/new.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Créer une nouvelle une notification' %}
+{% set h1 = 'admin.button.add_notification' | trans %}
 {% set href = path('app.admin.notification.index') %}
 
 {% block subContent %}
