--- a/app/Resources/views/notification/_form.html.twig
+++ b/app/Resources/views/notification/_form.html.twig
@@ -2,6 +2,6 @@
 
     {{ form_row(form.message) }}
 
-    <button type="submit" class="btn btn-primary">{{ button_label|default('Enregistrer')}}</button>
+    <button type="submit" class="btn btn-primary">{{ 'admin.button.save' | trans }}</button>
 
 {{ form_end(form) }}
