--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -20,7 +20,7 @@
                    href="{{ path('app_admin.dashboard_index') }}"
                    id="menu-dashboard">
                     <i class="nav-icon fas fa-th"></i>
-                    <p>Tableau de bord</p>
+                    <p>{{ 'admin.sidebar.dashboard' | trans }}</p>
                 </a>
             </li>
         <li class="nav-item">
@@ -29,7 +29,7 @@
                     class="nav-link {{ printActiveAdminSidebarLink(['app.admin.course.']) }}">
                 <i class="nav-icon fas fa-graduation-cap"></i>
                 <p>
-                    Cours
+                    {{ 'admin.sidebar.courses' | trans }}
                 </p>
             </a>
         </li>
@@ -44,7 +44,7 @@
                 <a href="#" class="nav-link {{ printActiveAdminSidebarLink(referentielLink) }}">
                     <i class="nav-icon fas fa-book"></i>
                     <p>
-                        Référentiel
+                        {{ 'admin.sidebar.reference_source' | trans }}
                         <i class="right fas fa-angle-left"></i>
                     </p>
                 </a>
@@ -57,7 +57,7 @@
                                class="nav-link {{ printActiveAdminSidebarLink(['app.admin.critical_achievement']) }}">
                                 <i class="fas fa-award nav-icon"></i>
                                 <p>
-                                    Acquis critiques
+                                    {{ 'admin.sidebar.critical_achievements' | trans }}
                                 </p>
                             </a>
                         </li>
@@ -69,7 +69,7 @@
                             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(activityLink) }}">
                                 <i class="nav-icon fas fa-film"></i>
                                 <p>
-                                    Activités
+                                    {{ 'admin.sidebar.activities.activities' | trans }}
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
@@ -81,7 +81,7 @@
                                            class="nav-link {{ printActiveAdminSidebarLink(['app.admin.activity.']) }}">
                                             <i class="fas fa-dot-circle nav-icon"></i>
                                             <p>
-                                                Activités
+                                                {{ 'admin.sidebar.activities.activities' | trans }}
                                             </p>
                                         </a>
                                     </li>
@@ -92,7 +92,7 @@
                                            class="nav-link {{ printActiveAdminSidebarLink(['app.admin.activity_type.']) }}">
                                             <i class="fas fa-dot-circle nav-icon"></i>
                                             <p>
-                                                Types
+                                                {{ 'admin.sidebar.activities.types' | trans }}
                                             </p>
                                         </a>
                                     </li>
@@ -103,7 +103,7 @@
                                            class="nav-link {{ printActiveAdminSidebarLink(['app_admin.mode_activity']) }}">
                                             <i class="fas fa-dot-circle nav-icon"></i>
                                             <p>
-                                                Modes
+                                                {{ 'admin.sidebar.activities.modes' | trans }}
                                             </p>
                                         </a>
                                     </li>
@@ -117,7 +117,7 @@
                                class="nav-link {{ printActiveAdminSidebarLink(['app.admin.year.']) }}">
                                 <i class="nav-icon fas fa-calendar"></i>
                                 <p>
-                                    Années
+                                    {{ 'admin.sidebar.years' | trans }}
                                 </p>
                             </a>
                         </li>
@@ -129,7 +129,7 @@
                                class="nav-link {{ printActiveAdminSidebarLink(['app.admin.campus.']) }}">
                                 <i class="fas fa-map-marker-alt nav-icon"></i>
                                 <p>
-                                    Campus
+                                    {{ 'admin.sidebar.campuses' | trans }}
                                 </p>
                             </a>
                         </li>
@@ -141,7 +141,7 @@
                                class="nav-link {{ printActiveAdminSidebarLink(['app.admin.domain.']) }}">
                                 <i class="fas fa-gem nav-icon"></i>
                                 <p>
-                                    Domaines
+                                    {{ 'admin.sidebar.domains' | trans }}
                                 </p>
                             </a>
                         </li>
@@ -153,7 +153,7 @@
                                class="nav-link {{ printActiveAdminSidebarLink(['app.admin.equipment.']) }}">
                                 <i class="nav-icon fas fa-drafting-compass"></i>
                                 <p>
-                                    Equipements
+                                    {{ 'admin.sidebar.equipments' | trans }}
                                 </p>
                             </a>
                         </li>
@@ -165,7 +165,7 @@
                                class="nav-link {{ printActiveAdminSidebarLink(['app.admin.language.']) }}">
                                 <i class="fas fa-language nav-icon"></i>
                                 <p>
-                                    Langues
+                                    {{ 'admin.sidebar.languages' | trans }}
                                 </p>
                             </a>
                         </li>
@@ -177,7 +177,7 @@
                                class="nav-link {{ printActiveAdminSidebarLink(['app.admin.level.']) }}">
                                 <i class="fas fa-layer-group nav-icon"></i>
                                 <p>
-                                    Niveaux
+                                    {{ 'admin.sidebar.levels' | trans }}
                                 </p>
                             </a>
                         </li>
@@ -189,7 +189,7 @@
                                class="nav-link {{ printActiveAdminSidebarLink(['app.admin.period.']) }}">
                                 <i class="nav-icon fas fa-calendar-week"></i>
                                 <p>
-                                    Périodes
+                                    {{ 'admin.sidebar.periods' | trans }}
                                 </p>
                             </a>
                         </li>
@@ -201,7 +201,7 @@
                                class="nav-link {{ printActiveAdminSidebarLink(['app.admin.structure.']) }}">
                                 <i class="nav-icon fas fa-building"></i>
                                 <p>
-                                    Structures
+                                    {{ 'admin.sidebar.structures' | trans }}
                                 </p>
                             </a>
                         </li>
@@ -215,7 +215,7 @@
             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(importLink) }}">
                 <i class="nav-icon fas fa-download"></i>
                 <p>
-                    Imports
+                    {{ 'admin.sidebar.imports' | trans }}
                     <i class="right fas fa-angle-left"></i>
                 </p>
             </a>
@@ -226,7 +226,7 @@
                        class="nav-link {{ printActiveAdminSidebarLink(['app_admin_import_csv_course_info']) }}">
                         <i class="nav-icon fas fa-graduation-cap"></i>
                         <p>
-                            Syllabus
+                            {{ 'admin.sidebar.syllabus' | trans }}
                         </p>
                     </a>
                 </li>
@@ -235,7 +235,7 @@
                        class="nav-link {{ printActiveAdminSidebarLink(['app_admin_import_csv_permission']) }}">
                         <i class="nav-icon fas fa-user-lock"></i>
                         <p>
-                            Permissions
+                            {{ 'admin.sidebar.permissions' | trans }}
                         </p>
                     </a>
                 </li>
@@ -244,7 +244,7 @@
                        class="nav-link {{ printActiveAdminSidebarLink(['app_admin_import_csv_user']) }}">
                         <i class="nav-icon fas fa-user"></i>
                         <p>
-                            Utilisateurs
+                            {{ 'admin.sidebar.users' | trans }}
                         </p>
                     </a>
                 </li>
@@ -256,7 +256,7 @@
             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(administrationLink) }}">
                 <i class="nav-icon fas fa-cogs"></i>
                 <p>
-                    Administration
+                    {{ 'admin.sidebar.administration' | trans }}
                     <i class="right fas fa-angle-left"></i>
                 </p>
             </a>
@@ -268,27 +268,18 @@
                            class="nav-link {{ printActiveAdminSidebarLink(['dmishh_settings_manage_global']) }}">
                             <i class="nav-icon fas fa-calculator"></i>
                             <p>
-                                Paramètres
+                                {{ 'admin.sidebar.settings' | trans }}
                             </p>
                         </a>
                     </li>
                 {% endif %}
-                <li class="nav-item pl-2">
-                    <a href="{{ path('dmishh_settings_manage_global') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['dmishh_settings_manage_global']) }}">
-                        <i class="nav-icon fas fa-calculator"></i>
-                        <p>
-                            Paramètres
-                        </p>
-                    </a>
-                </li>
 
                 <li class="nav-item pl-2">
                     <a href="{{ path('app_admin_groups_index') }}"
                        class="nav-link {{ printActiveAdminSidebarLink(['app_admin_groups']) }}">
                         <i class="nav-icon fas fa-users"></i>
                         <p>
-                            Groupes
+                            {{ 'admin.sidebar.groups' | trans }}
                         </p>
                     </a>
                 </li>
@@ -299,7 +290,7 @@
                            class="nav-link {{ printActiveAdminSidebarLink(['app.admin.job.']) }}">
                             <i class="nav-icon fas fa-clock"></i>
                             <p>
-                                Tâches planifiées
+                                {{ 'admin.sidebar.jobs' | trans }}
                             </p>
                         </a>
                     </li>
@@ -311,7 +302,7 @@
                            class="nav-link {{ printActiveAdminSidebarLink(['app.admin.user.']) }}">
                             <i class="nav-icon fas fa-user"></i>
                             <p>
-                                Utilisateurs
+                                {{ 'admin.sidebar.users' | trans }}
                             </p>
                         </a>
                     </li>
@@ -322,7 +313,7 @@
                        class="nav-link {{ printActiveAdminSidebarLink(['lexik_translation']) }}">
                         <i class="nav-icon fas fa-globe-africa"></i>
                         <p>
-                            Traductions
+                            {{ 'admin.sidebar.translations' | trans }}
                         </p>
                     </a>
                 </li>
@@ -333,7 +324,7 @@
                            class="nav-link {{ printActiveAdminSidebarLink(['app.admin.notification.']) }}">
                             <i class="nav-icon fas fa-bell"></i>
                             <p>
-                                Notifications
+                                {{ 'admin.sidebar.notifications' | trans }}
                             </p>
                         </a>
                     </li>
@@ -345,7 +336,7 @@
                class="nav-link {{ printActiveAdminSidebarLink(['app_admin_course_info_field_index']) }}">
                 <i class="nav-icon fas fa-copy"></i>
                 <p>
-                    Config duplication
+                    {{ 'admin.sidebar.duplication' | trans }}
                 </p>
             </a>
         </li>
