--- a/app/Resources/LexikTranslationBundle/views/Translation/grid.html.twig
+++ b/app/Resources/LexikTranslationBundle/views/Translation/grid.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Traductions' %}
+{% set h1 = 'admin.translation' | trans %}
 
 {% trans_default_domain 'LexikTranslationBundle' %}
 
