--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -6,7 +6,6 @@
 
 @import "custom_variables";
 
-
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 
 @import "~bootstrap4-toggle/css/bootstrap4-toggle.min.css";
@@ -19,3 +18,5 @@
 @import "~admin-lte";
 
 @import 'custom';
+
+@import "student_view";
