--- a/app/Resources/views/course_info/view/student_info.html.twig
+++ b/app/Resources/views/course_info/view/student_info.html.twig
@@ -1,33 +1,22 @@
-{% if courseInfo.agenda is not empty or courseInfo.organization is not empty %}
-<section id="info-section" class="content">
-    <div class="container-fluid">
-        <div class="card my-2 shadow">
-            <div class="card-header">
-                <div class="d-flex justify-content-between">
-                    <h3  class="text-shadow" style="font-weight: 500;">{{ 'app.view.student.tabs.info' | trans }}</h3>
-                </div>
-            </div>
-            <div class="card-body">
-                    <div class="ml-2">
-                        {% if courseInfo.agenda is not empty %}
-                            <dl>
-                                <dt>{{ 'app.view.student.info.agenda' | trans }}</dt>
-                                <dd>
-                                    {{ courseInfo.agenda | humanizeEmptyData() | purify }}
-                                </dd>
-                            </dl>
-                        {% endif %}
-                        {% if courseInfo.organization is not empty %}
-                            <dl>
-                                <dt>{{ 'app.view.student.info.organization' | trans }}</dt>
-                                <dd>
-                                    {{ courseInfo.organization | humanizeEmptyData() | purify }}
-                                </dd>
-                            </dl>
-                        {% endif %}
-                    </div>
-            </div>
+<section id="presentation-section" class="content">
+    <h3 class="blue_uca mt-5">Informations pratiques</h3>
+    <input type="image" src="/build/images/information_photo.jpg">
+
+    <div class="row mt-4">
+        <div class="col-4">
+            <input class="student-icon" type="image" src="/build/images/calendrier_picto.png">
+            Calendrier
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
         </div>
+        <div class="col-4">
+            <input class="student-icon" type="image" src="/build/images/organisation_picto.png">
+            Organisation
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+        </div>
+        <div class="col-4"></div>
     </div>
 </section>
-{% endif %}
