--- a/app/Resources/views/course_info/view/student_presentation.html.twig
+++ b/app/Resources/views/course_info/view/student_presentation.html.twig
@@ -1,128 +1,97 @@
 <section id="presentation-section" class="content">
-    <div class="container-fluid">
-        <div class="card my-2 shadow">
-            <div class="card-header">
-                <div class="d-flex justify-content-between">
-                    <h3  class="text-shadow" style="font-weight: 500;">{{ 'app.view.student.tabs.presentation' | trans }}</h3>
-                </div>
+    <h3 class="blue_uca">Présentation générale</h3>
+    <div class="dark-light">
+        <div class="row p-4">
+            <div class="col-4">
+                <span>
+                <input class="student-icon" type="image" src="/build/images/composante_picto.png">
+                    Composante
+                </span>
+                <ul class="blue_uca">
+                    <li>{{ courseInfo.structure.label }}</li>
+                </ul>
             </div>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <dl>
-                            <dt>{{ 'app.presentation.view.general.level' | trans }}</dt>
-                            <dd class="mandatory-data">{{ courseInfo.level|humanizeEmptyData(null, 'app.const.level.')}}</dd>
-                        </dl>
-                        {% if courseInfo.periods is not empty %}
-                            <dl>
-                                <dt>{{ 'app.presentation.view.general.period' | trans }}</dt>
-                                <dd>
-                                    {% set periods = "" %}
-                                    {% for period in courseInfo.periods %}
-                                        {% set periods = periods ~ (not loop.first ? ', ') ~ period.label %}
-                                    {% endfor %}
-                                    {{ periods|humanizeEmptyData() }}
-                                </dd>
-                            </dl>
-                        {% endif %}
-                        {% if courseInfo.campuses is not empty %}
-                            <dl>
-                                <dt>{{ 'app.presentation.view.general.campus' | trans }}</dt>
-                                <dd>
-                                    {% set campuses = "" %}
-                                    {% for campus in courseInfo.campuses %}
-                                        {% set campuses = campuses ~ (not loop.first ? ', ') ~ campus.label %}
-                                    {% endfor %}
-                                    {{ campuses|humanizeEmptyData() }}
-                                </dd>
-                            </dl>
-                        {% endif %}
+            <div class="col-4">
+                <input class="student-icon" type="image" src="/build/images/domaine_picto.png">
+                <span>Domaine disciplinaire</span>
+                <ul class="blue_uca">
+                    <div class="row" style="width: 50%">
+                        {% for domain in courseInfo.domains %}
+                            {{ dump(courseInfo.domains) }}
+                            <li class="col-md-6">{{ domain.label }}</li>
+                        {% endfor %}
                     </div>
-                    <div class="col-md-6">
-                        <dl>
-                            <dt>{{ 'app.presentation.view.general.domain' | trans }}</dt>
-                            <dd class="mandatory-data">
-                                {% set domains = "" %}
-                                {% for domain in courseInfo.domains %}
-                                    {% set domains = domains ~ (not loop.first ? ', ') ~ domain.label %}
-                                {% endfor %}
-                                {{ domains|humanizeEmptyData() }}
-                            </dd>
-                        </dl>
-                        {% if courseInfo.languages is not empty %}
-                            <dl>
-                                <dt>{{ 'app.presentation.view.general.languages' | trans }}</dt>
-                                <dd>
-                                    {% set languages = "" %}
-                                    {% for language in courseInfo.languages %}
-                                        {% set languages = languages ~ (not loop.first ? ', ') ~ language.label %}
-                                    {% endfor %}
-                                    {{ languages|humanizeEmptyData() }}
-                                </dd>
-                            </dl>
-                        {% endif %}
+                </ul>
+            </div>
+            <div class="col-4">
+                <input class="student-icon" type="image" src="/build/images/niveau_picto.png">
+                <span>Niveau du cours</span>
+                <ul class="blue_uca">
+                    <div class="row" style="width: 50%">
+                        <li>toto</li>
                     </div>
-                </div>
-                {% if courseInfo.image is not null or courseInfo.video is not null %}
-                    <div class="row mt-2">
-                        <div class="col-md-6" style="min-height: 150px;">
-                            {% if courseInfo.mediaType == 'image' and courseInfo.image is not null %}
-                                {% set imgSrc = courseInfo.image | split('/') | last %}
-                                <img class="img-thumbnail" src="{{ asset('data/' ~ imgSrc) }}">
-                            {% elseif courseInfo.mediaType == 'video' and courseInfo.video is not null %}
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    {{ courseInfo.video|raw }}
-                                </div>
-                            {% else %}
-                                <div class="h-100 border rounded d-flex align-items-center justify-content-center">
-                                    <i class="fas fa-4x fa-images text-light"></i>
-                                </div>
-                            {% endif %}
-                        </div>
-                        {% if courseInfo.summary is not null %}
-                            <div id="general-summary" class="col-md-6 mandatory-data" style="min-height: 150px;">
-                                {{ courseInfo.summary|humanizeEmptyData()|purify }}
-                            </div>
-                        {% endif %}
+                </ul>
+            </div>
+            <div class="col-4">
+                <input class="student-icon" type="image" src="/build/images/lieu_picto.png">
+                <span>Lieu d'enseignement</span>
+                <ul class="blue_uca">
+                    <li>toto</li>
+                </ul>
+            </div>
+            <div class="col-4">
+                <input class="student-icon" type="image" src="/build/images/langue_picto.png">
+                <span>Langue</span>
+                <ul class="blue_uca">
+                    <div class="row" style="width: 50%">
+                        <li>toto</li>
                     </div>
-                {% endif %}
-                <div class="row">
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead>
-                            <tr class="text-center">
-                                <th>{{ 'app.presentation.view.teachers.lastname' | trans }}</th>
-                                <th>{{ 'app.presentation.view.teachers.firstname' | trans }}</th>
-                                <th>{{ 'app.presentation.view.teachers.mail' | trans }}</th>
-                                <th>{{ 'app.presentation.view.teachers.responsible' | trans }}</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for teacher in courseInfo.courseTeachers %}
-                                <tr class="text-center">
-                                    <td>{{ teacher.lastname }}</td>
-                                    <td>{{ teacher.firstname }}</td>
-                                    <td>
-                                        {% if teacher.emailVisibility %}
-                                            {{ teacher.email }}
-                                        {% else %}
-                                            {{ ''|humanizeEmptyData() }}
-                                        {% endif %}
-                                    </td>
-                                    <td>
-                                        {{ teacher.manager|humanizeBoolean }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+                </ul>
+            </div>
+            <div class="col-4">
+                <input class="student-icon" type="image" src="/build/images/info_picto.png">
+                <span>Appartient a UE Microbiologie</span>
+                <ul class="blue_uca">
+                    <li>toto</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col-4">
+            <img class="img-fluid" src="/build/images/presentation_photo.jpg">
+        </div>
+        <div class="col-8">
+            <p class="ml-4">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vel lacus leo. Aenean molestie velit
+                vitae leo condimentum consectetur. Cras tempus sem at quam vehicula, at consectetur quam tempus. Aenean
+                porttitor aliquam libero, nec pulvinar mi mattis a. Maecenas ornare metus sapien, at viverra neque
+                iaculis nec. Suspendisse potenti. Duis hendrerit condimentum velit, faucibus tempor magna dignissim nec.
+                Sed eu mollis diam, nec malesuada orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                in nulla vel dui interdum dapibus. Nulla et cursus felis, eget porttitor mi. Aenean venenatis viverra
+                volutpat.
+            </p>
+            <p class="ml-4">
+            <div>Equipe enseignante</div>
+            <span class="blue_uca">test</span>
+            </p>
+        </div>
+    </div>
 
-                <div class="row">
-                    {% include 'course_info/presentation/view/teaching_mode.html.twig' %}
-                </div>
-            </div>
+    <div class="row mt-5">
+        <div class="col-2" style="border-right: solid white; border-width: 0 1px;">
+            <input width="40px" height="40px" type="image" src="/build/images/presentiel_picto.png">
+            <span style="border-bottom: solid white; border-width:0 1px ;">Présentiel</span>
+            <ul class="blue_uca">
+                <li>toto</li>
+            </ul>
+        </div>
+        <div class="col-3" style="margin-left: 20px">
+            <input type="image" width="30px" height="30px" src="/build/images/distanciel_picto.png">
+            <span>Distanciel</span>
+            <ul class="blue_uca">
+                <li>toto</li>
+            </ul>
         </div>
     </div>
 </section>
