--- a/app/Resources/views/domain/index.html.twig
+++ b/app/Resources/views/domain/index.html.twig
@@ -1,9 +1,4 @@
 {% extends 'admin_layout.html.twig' %}
-                    </div>
-                    <div class="col-12">
-                        <div class="form-group">
-      ²                      <button type="submit" class="btn btn-primary">{{ 'admin.button.filter' | trans }}</button>
-                            <a class="btn btn-danger" href="{{  path('app.admin.domain.index')  }}">{{ 'admin.button
 {% set h1 = 'admin.domain.list_domains' | trans %}
 {% block subContent %}
 
@@ -23,7 +18,12 @@
                         <div class="form-group">
                             {{ form_label(form.structures.label, 'admin.domain.structure') }}
                             {{ form_widget(form.structures.label) }}
-                        </div>.reset_filters' | trans }}</a>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">{{ 'admin.button.filter' | trans }}</button>
+                            <a class="btn btn-danger" href="{{  path('app.admin.domain.index')  }}">{{ 'admin.button.reset_filters' | trans }}</a>
                         </div>
                     </div>
                 </div>
@@ -77,4 +77,5 @@
             </div>
         {% endif %}
     </div>
+
 {% endblock %}
