--- a/app/Resources/views/course_info/view/student_objectives.html.twig
+++ b/app/Resources/views/course_info/view/student_objectives.html.twig
@@ -1,21 +1,19 @@
 <section id="presentation-section" class="content">
-    <h3 class="blue_uca mt-5">Objectifs du cours</h3>
+    <h3 class="blue_uca mt-5">{{ 'app.view.student.tabs.objectives' | trans }}</h3>
     <div class="row">
         <div class="col-4">
             <img class="img-fluid" src="/build/images/objectif_photo.jpg">
         </div>
         <div class="col-8">
-            <p>
-                A la fin de ce cours, je devrais être en mesure de ...
+            <p class="text-center text-bold">
+                {{ 'app.view.student.objectives.achievements_description' | trans }}
             </p>
             <ul class="blue_uca">
-                <li>toto</li>
-                <li>toto</li>
-                <li>toto</li>
-                <li>toto</li>
-                <li>toto</li>
-                <li>toto</li>
-                <li>toto</li>
+                {% if courseInfo.courseAchievements is not empty %}
+                    {% for achievement in courseInfo.courseAchievements %}
+                        <li>{{ achievement.description }}</li>
+                    {% endfor %}
+                {% endif %}
             </ul>
         </div>
 
