student-objectives padding

--- a/app/Resources/views/course_info/view/student_objectives.html.twig
+++ b/app/Resources/views/course_info/view/student_objectives.html.twig
@@ -4,8 +4,8 @@
         <div class="col-4">
             <img class="img-fluid" src="/build/images/objectif_photo.jpg">
         </div>
-        <div class="col-8">
-            <p class="text-center text-bold">
+        <div class="col-8 px-5">
+            <p class="ml-4 text-bold">
                 {{ 'app.view.student.objectives.achievements_description' | trans }}
             </p>
             <ul class="blue_uca">
