--- a/app/Resources/assets/scss/student_view.scss
+++ b/app/Resources/assets/scss/student_view.scss
@@ -8,6 +8,11 @@
   color: #46aed8;
 }
 
+.progress {
+  background-color: #202020;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 
 .dark-light{
   background-color: #202020;
