--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -6,6 +6,7 @@
             {% include 'course_info/view/student_presentation.html.twig' %}
             {% include 'course_info/view/student_objectives.html.twig' %}
             {% include 'course_info/view/student_evaluation.html.twig' %}
+            {% include 'course_info/view/student_equipments.html.twig' %}
             {% include 'course_info/view/student_info.html.twig' %}
         </div>
         <div class="background_student col-1"></div>
