--- a/app/Resources/views/course_info/view/student_evaluation.html.twig
+++ b/app/Resources/views/course_info/view/student_evaluation.html.twig
@@ -1,5 +1,5 @@
 <section id="presentation-section" class="content">
-    <h3 class="blue_uca mt-5">Modalités d'évaluation</h3>
+    <h3 class="blue_uca mt-5">{{ 'app.view.student.tabs.evaluation' | trans }}</h3>
     <input type="image" src="/build/images/modalite_photo.jpg">
 
     <div class="row mt-4">
